# mlflow-log-cli

./: .gitignore  README.md  pyproject.toml  template.go  template.json
.github/workflows/: test.yaml
examples/: data.go  data.json
mlflow_log_cli/: cli.py  json_file.py
tests/: test_json_file.py
