[tool.poetry]
name = "mlflow-log-cli"
version = "0.1.0"
description = ""
authors = ["なるみ <toucans-cutouts0f@icloud.com>"]

[tool.poetry.dependencies]
python = "~3.8"
click = "^8.1.3"
mlflow = "^1.26.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
yapf = "^0.32.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
mlflow-log-cli = "mlflow_log_cli.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
